Фикс имён файлов + конфиг менеджера + сваггера
